# prosaia

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/prosaia/: main.py  prompt_engine.py
templates/: index.html
